Inserir em uma classe abstrata funcionalidades repetidas da UI e usar herança para minimizar código duplicado.