@@ -1,17 +1,14 @@
 package ui.consultarMaior;
 
-import entidades.Fornecedor;
 import entidades.Tecnologia;
+import ui.funcoes.JDialogComFuncoes;
 
 import javax.swing.*;
 import java.awt.*;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-public class TecnologiaMaiorValor extends JDialog {
+public class TecnologiaMaiorValor extends JDialogComFuncoes {
     private Tecnologia tecMaiorValor;
-    private final Color corPrincipal = new Color(20, 86, 160);
 
     public TecnologiaMaiorValor(List<Tecnologia> tecnologias) {
         super();
@@ -66,34 +63,8 @@ public class TecnologiaMaiorValor extends JDialog {
         this.setLayout(new BorderLayout());
     }
 
-    private JPanel criarPainelTitulo(String textoTitulo, int tamanhoFonte) {
-        JPanel painelTitulo = new JPanel(new BorderLayout());
-        painelTitulo.setOpaque(true);
-        painelTitulo.setBackground(corPrincipal);
-
-        int vertical = 16;
-        int horizontal = 24;
-        painelTitulo.setBorder(BorderFactory.createEmptyBorder(vertical, horizontal, vertical, horizontal));
-
-        JLabel titulo = new JLabel(textoTitulo, JLabel.CENTER);
-        titulo.setFont(new Font("Arial", Font.BOLD, tamanhoFonte));
-        titulo.setForeground(Color.WHITE);
-
-        painelTitulo.add(titulo, BorderLayout.CENTER);
-
-        return painelTitulo;
-    }
-
-    private JButton criarBotao(String texto) {
-        JButton botao = new JButton(texto);
-        botao.setMargin(new Insets(10, 20, 10, 20));
-        botao.setBackground(Color.WHITE);
-        botao.setForeground(corPrincipal);
-        return botao;
-    }
-
     private Tecnologia encontrarTecnologiaComMaiorValor(List<Tecnologia> tecnologias) {
-        Tecnologia maior = tecnologias.get(0);
+        Tecnologia maior = tecnologias.getFirst();
 
         int cont = 0;
 
